[uodtade] criação rota cliente

--- a/src/views/partials/client-box.ejs
+++ b/src/views/partials/client-box.ejs
@@ -5,8 +5,8 @@
     </div>
 
     <div class="user-info">
-      <h2>Jeffrey Client</h2>
-      <p>address@hotmail.com</p>
+      <h2>Client</h2>
+      <p>email@address.com</p>
     </div>
     <div class="user-profile-buttons">
       <label>
