--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -4,6 +4,7 @@
 <%- include("./partials/head")%>
 <link rel="stylesheet" href="/css/global.css" />
 <link rel="stylesheet" href="/css/home.css" />
+<link rel="stylesheet" href="/css/home-grid.css" />
 
 <body>
   <!--header-->
@@ -20,10 +21,9 @@
   </div>
   <!--bannerWebEnd-->
   <!--offer-->
-
+  
   <div class="ctn-offer">
-    <%- include("./partials/offers") %>
-    <%- include("./partials/cards") %>
+    <%- include("./partials/home-grid") %>
   </div>
   <!--offerEnd-->
   <!--footer-->
