--- a/src/views/admin/createProduct.ejs
+++ b/src/views/admin/createProduct.ejs
@@ -10,30 +10,43 @@
   <%- include("../partials/header") %>
   <!--header-fim-->
   <main>
-    <div>
-        <% if(typeof error != 'undefined'){%>
-        <h4><%= error %></h4>
-        <% } %>
+    <div class="container mt-5 mb-5">
+      <div class="row d-flex align-items-center justify-content-center">
+          <div class="col-md-6">
+              <div class="card px-5 py-5"> 
+                <% if(typeof error != 'undefined'){%>
+                  <h4><%= error %></h4>
+                  <% } %>
+
+                  <form action="salvar-produto" method="POST" enctype="multipart/form-data">
+                    <label>Nome do produto:</label><br>
+                    <input class="mb-3 fs-2" type="text" name="name" placeholder="Ex:.Telefone" />
+                    <br>
+                            
+                    <label>Preço:</label><br>
+                    <input class="mb-3 fs-2" type="text" name="unit_price" placeholder="Ex:.20" />
+                    <br>
+                    <label>Preço em offerta:</label><br>
+                    <input class="mb-3 fs-2" type="text" name="offer_price" placeholder="Ex:.20" />
+                    <br>
+            
+                    <label>Descrição</label><br>
+                    <input class="mb-3 fs-2" type="text" name="description" placeholder="EX:. Motorolla e23"/>
+                    <br>
+            
+                    <label for="formFile" class="form-label">Imagem do produto:</label><br>
+                    <input class="form-control" id="formFile" type="file" name="image" />
+                    <br>
+            
+                    <button class="btn btn-primary" type="submit">Enviar</button>
+                </form>
+                  
+                 
+              </div>
+          </div>
       </div>
-    <form action="salvar-produto" method="POST" enctype="multipart/form-data">
-        <label>Nome do produto:</label><br>
-        <input class="inputs" type="text" name="name" placeholder="Ex:.Telefone" />
-        <br>
-                
-        <label>Preço:</label><br>
-        <input class="inputs" type="text" name="unit_price" placeholder="Ex:.20" />
-        <br>
+   </div>
 
-        <label>Descrição</label><br>
-        <input class="image" type="text" name="description" placeholder="EX:. Motorolla e23"/>
-        <br>
-
-        <label>Imagem do produto:</label><br>
-        <input id="input-img" type="file" name="image" />
-        <br>
-
-        <button type="submit">Finalizar cadastro</button>
-    </form>
 </main>
   
 
