--- a/src/views/partials/home-grid.ejs
+++ b/src/views/partials/home-grid.ejs
@@ -1,11 +1,10 @@
-<div class="grid">
-
+<div class="home-grid">
     <div class="content">
         
         <ul class="rig columns-4">
             <% product.forEach(products => {%> 
             <li>
-                <a href="/produtos/<%= products.name%>"> <img src="/uploads/<%=products.image%>" class="product-image" alt="<%= products.name %>">
+                <a href="/produtos/<%= products.name%>"> <img src="/uploads/<%=products.image%>" class="image" alt="<%= products.name %>">
                 <h4><%= products.name%></h4>
                 <i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star-half-o fa-2x"></i><i class="active fa fa-star-o fa-2x"></i>
                 <p><%= products.description %></p>
