--- a/src/views/partials/home-grid.ejs
+++ b/src/views/partials/home-grid.ejs
@@ -5,16 +5,16 @@
             <% product.forEach(products => {%> 
             <li>
                 <a href="/produtos/<%= products.name%>"> <img src="/uploads/<%=products.image%>" class="image" alt="<%= products.name %>">
-                <h4><%= products.name%></h4>
+                <h4 class="home-product-name"><%= products.name%></h4>
                 <i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star fa-2x"></i><i class="fa fa-star-half-o fa-2x"></i><i class="active fa fa-star-o fa-2x"></i>
-                <p><%= products.description %></p>
-                <div class="price">R$ <%= products.offer_price %></div>
-                <span style="text-decoration: line-through; color:red;">R$<%= products.unit_price %> </span>
+                <p class="home-product-desctiption"><%= products.description %></p>
+                <div class="home-product-offer-price">R$ <%= products.offer_price %></div>
+                <span class="home-product-price style" style="text-decoration: line-through; color:red;">R$<%= products.unit_price %> </span>
                 <hr>
-                <button class="btn btn-default btn-xs pull-right" type="button">
+                <button class="btn btn-default btn-xs pull-right fs-3" type="button">
                     <i class="fa fa-cart-arrow-down"></i> Comprar
                 </button>
-                <button class="btn btn-default btn-xs pull-left" type="button">
+                <button class="btn btn-default btn-xs pull-left fs-3" type="button">
                     <i class="fa fa-eye"></i> Detalhes
                 </button>
             </li>
