[Update] rotas formularios

--- a/src/public/css/panel.css
+++ b/src/public/css/panel.css
@@ -153,6 +153,7 @@
   main {
       display: flex;
       flex-direction: column;
+      margin-top: 2rem;
   }
   .panel-user{
       max-width: 30%;
@@ -218,3 +219,4 @@
       color: white;
       font-weight: bold;
   }
+
