--- a/src/views/admin/createProduct.ejs
+++ b/src/views/admin/createProduct.ejs
@@ -38,7 +38,7 @@
                     <input class="form-control" id="formFile" type="file" name="image" />
                     <br>
             
-                    <button class="btn btn-primary" type="submit">Enviar</button>
+                    <button class="btn btn-primary fs-2" type="submit">Enviar</button>
                 </form>
                   
                  
