--- a/src/views/partials/admin-box.ejs
+++ b/src/views/partials/admin-box.ejs
@@ -5,14 +5,19 @@
     </div>
 
     <div class="user-info">
-      <h2>Jeffrey Tech</h2>
-      <p>address@hotmail.com</p>
+      <h2>Tech</h2>
+      <p>address@email.com</p>
     </div>
     <div class="user-profile-buttons">
 
       <label>
         <a href="/produtos/criar-produto">
         <button class="profile-btn" type="submit">Cadastro Produtos</button>
+      </a>
+      </label>
+      <label>
+        <a href="/produtos/lista-produtos">
+        <button class="profile-btn" type="submit">Lista Produtos</button>
       </a>
       </label>
       <label>
