--- a/src/public/css/home-grid.css
+++ b/src/public/css/home-grid.css
@@ -83,8 +83,6 @@ a:link {
   text-decoration: none;
 }
 
-
-
   @media (max-width: 680px) {
     ul.grid-nav li {
       display: inline-block;
@@ -96,6 +94,7 @@ a:link {
     }
     ul.rig {
       margin-left: 0;
+      margin-right: 1rem;
     }
     ul.rig li {
       width: 100% !important;
