--- a/src/views/admin/listProduct.ejs
+++ b/src/views/admin/listProduct.ejs
@@ -10,43 +10,241 @@
   <%- include("../partials/header") %>
   <!--header-fim-->
 <main>
-  <div>
-    <a href="/" class="btn btn-primary ml-3">Lista Produtos</a>  
-    <a href="/produtos/criar" class="btn btn-secondary ml-3">Novo Produto</a> 
-</div>    
-
-<br>
-  <table class="table">
-<thead>
-  <tr>
-    <th scope="col">#</th>
-    <th scope="col"><%= products.name%></th>
-    <th width="200px">Action</th>
  
-  </tr>
-</thead>
-<tbody>
-  <% if(data.length){
- 
-  for(var i = 0; i< data.length; i++) {%>  
-  <tr>
-    <th scope="row"><%= (i+1) %></th>
-    <td><%= data[i].name%></td>
-    <td>
-    <a class="btn btn-success edit" href="../produtos/atualizar/<%=data[i].id%>">Edit</a>                       
-    <a class="btn btn-danger delete" onclick="return alert('tem certeza?')" href="../produtos/apagar/<%=data[i].id%>">Apagar</a>                       
-   </td>
-  </tr>
-  <% }
-           
-   }else{ %>
-       <tr>
-          <td colspan="3">Nenhum Produto</td>
-       </tr>
-    <% } %>    
+  <div class="container">
+  <div class="row flex-lg-nowrap">
+    
   
-</tbody>
-</table>
+      <div class="row flex-lg-nowrap">
+        <div class="col mb-3">
+          <div class="e-panel card">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="ml-2"><span>Produtos Cadastrados</span></h6>
+              </div>
+              <div class="e-table">
+                <div class="table-responsive table-lg ml-3">
+                  <table class="table table-bordered text-center">
+                   
+                    <thead>
+                      
+                      <tr>
+                       
+                        <th class="align-top">
+                          <div class="custom-control custom-control-inline custom-checkbox custom-control-nameless m-0">
+                            <input type="checkbox" class="custom-control-input" id="all-items">
+                            <label class="custom-control-label" for="all-items"></label>
+                          </div>
+                        </th>
+                        <th>Imagem</th>
+                        <th class="max-width">Nome</th>
+                        <th class="sortable">Data</th>
+                        <th> </th>
+                        <th>Opções</th>
+                        
+                      </tr>
+                    </thead>
+                    
+                    <tbody>
+                      <% product.forEach(products => {%> 
+                      <tr>
+                        <td class="align-middle">
+                          <div class="custom-control custom-control-inline custom-checkbox custom-control-nameless m-0 align-top">
+                            <input type="checkbox" class="custom-control-input" id="item-1">
+                            <label class="custom-control-label" for="item-1"></label>
+                          </div>
+                        </td>
+                        <td class="align-middle text-center">
+                          <div class="bg-light d-inline-flex justify-content-center align-items-center align-top" style="width: 10rem; height: auto; "><img src="/uploads/<%=products.image%>" class="img-fluid mx-auto d-block" alt="<%= products.name %>"></div>
+                        </td>
+                        <td class="text-nowrap align-middle"><%= products.name %></td>
+                        <td class="text-nowrap align-middle"><span><%= products.createdAt %></span></td>
+                        <td class="text-center align-middle"><i class="fa fa-fw text-secondary cursor-pointer fa-toggle-on"></i></td>
+                        <td class="text-center align-middle">
+                          <div class="btn-group align-top">
+                              <button class="btn btn-secondary btn-outline-light badge fs-6" type="button" data-toggle="modal" data-target="#user-form-modal">Atualizar</button>
+                              <button class="btn btn-secondary btn-outline-light badge fs-6" type="button"><i class="fa fa-trash"></i></button>
+                          </div>
+                           
+                        </td>
+                       
+                      </tr>
+                      <% }) %>
+                    </tbody>
+                    
+                  </table>
+                </div>
+                <div class="d-flex justify-content-center">
+                  <ul class="pagination mt-3 mb-0">
+                    <li class="disabled page-item"><a href="#" class="page-link">‹</a></li>
+                    <li class="active page-item"><a href="#" class="page-link">1</a></li>
+                    <!-- <li class="page-item"><a href="#" class="page-link">2</a></li> -->
+                    <li class="page-item"><a href="#" class="page-link">›</a></li>
+                    <li class="page-item"><a href="#" class="page-link">»</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-3 mb-3">
+          <div class="card">
+            <div class="card-body">
+              <div class="text-center px-xl-3">
+                <button class="btn btn-primary btn-block" type="button" data-toggle="modal" data-target="#user-form-modal" onclick="location.href='/produtos/criar-produto';">Cadastrar Produto</button>
+                
+              </div>
+              
+              <hr class="my-3">
+              <div>
+                <div class="form-group">
+                  <label>Periodo desde-até:</label>
+                  <div>
+                    <input id="dates-range" class="form-control flatpickr-input" placeholder="01 Dec 17 - 27 Jan 18" type="text" readonly="readonly">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label>Procurar por Nome:</label>
+                  <div><input class="form-control w-100" type="text" placeholder="Name" value=""></div>
+                </div>
+              </div>
+              <hr class="my-3">
+              <div class="">
+                <label>Status:</label>
+                <div class="px-2">
+                  <div class="custom-control custom-radio">
+                    <input type="radio" class="custom-control-input" name="user-status" id="users-status-disabled">
+                    <label class="custom-control-label" for="users-status-disabled">Desabilitado</label>
+                  </div>
+                </div>
+                <div class="px-2">
+                  <div class="custom-control custom-radio">
+                    <input type="radio" class="custom-control-input" name="user-status" id="users-status-active">
+                    <label class="custom-control-label" for="users-status-active">Ativo</label>
+                  </div>
+                </div>
+                <div class="px-2">
+                  <div class="custom-control custom-radio">
+                    <input type="radio" class="custom-control-input" name="user-status" id="users-status-any" checked="">
+                    <label class="custom-control-label" for="users-status-any">Qualquer</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+      <!-- User Form Modal -->
+      <div class="modal fade" role="dialog" tabindex="-1" id="user-form-modal">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Create User</h5>
+              <button type="button" class="close" data-dismiss="modal">
+                <span aria-hidden="true">×</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="py-1">
+                <form class="form" novalidate="">
+                  <div class="row">
+                    <div class="col">
+                      <div class="row">
+                        <div class="col">
+                          <div class="form-group">
+                            <label>Full Name</label>
+                            <input class="form-control" type="text" name="name" placeholder="John Smith" value="John Smith">
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="form-group">
+                            <label>Username</label>
+                            <input class="form-control" type="text" name="username" placeholder="johnny.s" value="johnny.s">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col">
+                          <div class="form-group">
+                            <label>Email</label>
+                            <input class="form-control" type="text" placeholder="user@example.com">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col mb-3">
+                          <div class="form-group">
+                            <label>About</label>
+                            <textarea class="form-control" rows="5" placeholder="My Bio"></textarea>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 col-sm-6 mb-3">
+                      <div class="mb-2"><b>Change Password</b></div>
+                      <div class="row">
+                        <div class="col">
+                          <div class="form-group">
+                            <label>Current Password</label>
+                            <input class="form-control" type="password" placeholder="••••••">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col">
+                          <div class="form-group">
+                            <label>New Password</label>
+                            <input class="form-control" type="password" placeholder="••••••">
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="form-group">
+                            <label>Confirm <span class="d-none d-xl-inline">Password</span></label>
+                            <input class="form-control" type="password" placeholder="••••••"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12 col-sm-5 offset-sm-1 mb-3">
+                      <div class="mb-2"><b>Keeping in Touch</b></div>
+                      <div class="row">
+                        <div class="col">
+                          <label>Email Notifications</label>
+                          <div class="custom-controls-stacked px-2">
+                            <div class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" id="notifications-blog" checked="">
+                              <label class="custom-control-label" for="notifications-blog">Blog posts</label>
+                            </div>
+                            <div class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" id="notifications-news" checked="">
+                              <label class="custom-control-label" for="notifications-news">Newsletter</label>
+                            </div>
+                            <div class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" id="notifications-offers" checked="">
+                              <label class="custom-control-label" for="notifications-offers">Personal Offers</label>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col d-flex justify-content-end">
+                      <button class="btn btn-primary" type="submit">Save Changes</button>
+                    </div>
+                  </div>
+                </form>
+  
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 </main>
   
 
