--- a/src/views/admin/updateProduct.ejs
+++ b/src/views/admin/updateProduct.ejs
@@ -18,16 +18,18 @@
                 <h4><%= error %></h4>
                 <% } %>
 
-                <form action="salvar-produto" method="POST" enctype="multipart/form-data">
+                <form action="/salvar-edicao-produto/<% product._id %> " method="post" enctype="multipart/form-data">
+                  
                   <label>Nome do produto:</label><br>
-                  <input class="mb-3 fs-2" type="text" name="name" placeholder="Ex:.Telefone" />
+                  <input class="mb-3 fs-2" type="text" name="name" placeholder="Ex:.Telefone" value="<%= product.name %> " required />
                   <br>
                           
                   <label>Preço:</label><br>
-                  <input class="mb-3 fs-2" type="text" name="unit_price" placeholder="Ex:.20" />
+                  <input class="mb-3 fs-2" type="text" name="unit_price" placeholder="Ex:.20" value="<%= product.unit_price %> " required/>
                   <br>
                   <label>Preço em offerta:</label><br>
-                  <input class="mb-3 fs-2" type="text" name="offer_price" placeholder="Ex:.20" />
+                  <input class="mb-3 fs-2" type="text" name="offer_price" placeholder="Ex:.20"
+                  value=" <%= product.offer_price %> " required/>
                   <br>
           
                   <label>Descrição</label><br>
@@ -36,9 +38,11 @@
           
                   <label for="formFile" class="form-label">Imagem do produto:</label><br>
                   <input class="form-control" id="formFile" type="file" name="image" />
+                  <img src="/<%= product. image %> " width="100%" class ="img-thumbnail">
+                  <input type="hidden" name="old_image" value="<%= user.image %> " class="type">
                   <br>
           
-                  <button class="btn btn-primary fs-2" type="submit">Enviar</button>
+                  <button class="btn btn-primary fs-2" type="submit">Atualizar</button>
               </form>
                 
                
