--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -25,7 +25,7 @@
                     </div>
                     <div class="form-input"> <i class="fa fa-lock"></i> <input type="password" name="password" class="form-control" placeholder="Crie uma Senha" required> </div>
                     <span id="login-error fs-3"><%= typeof error !== "undefined" ? error:'' %></span>
-                    <div> <button id="login-button" class="btn btn-primary mt-4 signup">Entrar</button></div>
+                    <div class="text-center"> <button id="login-button mx-auto" class="btn btn-primary mt-4 signup">Entrar</button></div>
                     
                     
                   </form>
