--- a/src/views/admin/listProduct.ejs
+++ b/src/views/admin/listProduct.ejs
@@ -20,7 +20,7 @@
           <div class="e-panel card">
             <div class="card-body">
               <div class="card-title">
-                <h5 class="ml-2"><span>Produtos Cadastrados</span></h6>
+                <h5 class="ml-2 "><span class="text-primary text-center">Produtos Cadastrados</span></h6>
               </div>
               <div class="e-table">
                 <div class="table-responsive table-lg ml-3">
