--- a/src/views/partials/admin-box.ejs
+++ b/src/views/partials/admin-box.ejs
@@ -11,12 +11,12 @@
     <div class="user-profile-buttons">
 
       <label>
-        <a href="/produtos/criar-produto">
+        <a href="/admin/criar-produtos">
         <button class="profile-btn" type="submit">Cadastro Produtos</button>
       </a>
       </label>
       <label>
-        <a href="/produtos/lista-produtos">
+        <a href="/admin/lista-produtos">
         <button class="profile-btn" type="submit">Lista Produtos</button>
       </a>
       </label>
