--- a/src/views/admin/listProduct.ejs
+++ b/src/views/admin/listProduct.ejs
@@ -62,7 +62,7 @@
                         <td class="text-center align-middle"><i class="fa fa-fw text-secondary cursor-pointer fa-toggle-on"></i></td>
                         <td class="text-center align-middle">
                           <div class="btn-group align-top">
-                              <button class="btn btn-secondary btn-outline-light badge fs-6" type="button" data-toggle="modal" data-target="#user-form-modal">Atualizar</button>
+                              <button class="btn btn-secondary btn-outline-light badge fs-6" type="button" onclick="window.location.href='editar-produto/<%= products.id %>'">Atualizar</button>
                               <button class="btn btn-secondary btn-outline-light badge fs-6" type="button"><i class="fa fa-trash"></i></button>
                           </div>
                            
@@ -91,7 +91,7 @@
           <div class="card">
             <div class="card-body">
               <div class="text-center px-xl-3">
-                <button class="btn btn-primary btn-block" type="button" data-toggle="modal" data-target="#user-form-modal" onclick="location.href='/produtos/criar-produto';">Cadastrar Produto</button>
+                <button class="btn btn-primary btn-block" type="button" data-toggle="modal" data-target="#user-form-modal" onclick="location.href='/admin/criar-produtos';">Cadastrar Produto</button>
                 
               </div>
               
@@ -134,117 +134,6 @@
           </div>
         </div>
       </div>
-  
-      <!-- User Form Modal -->
-      <div class="modal fade" role="dialog" tabindex="-1" id="user-form-modal">
-        <div class="modal-dialog modal-lg" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Create User</h5>
-              <button type="button" class="close" data-dismiss="modal">
-                <span aria-hidden="true">×</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <div class="py-1">
-                <form class="form" novalidate="">
-                  <div class="row">
-                    <div class="col">
-                      <div class="row">
-                        <div class="col">
-                          <div class="form-group">
-                            <label>Full Name</label>
-                            <input class="form-control" type="text" name="name" placeholder="John Smith" value="John Smith">
-                          </div>
-                        </div>
-                        <div class="col">
-                          <div class="form-group">
-                            <label>Username</label>
-                            <input class="form-control" type="text" name="username" placeholder="johnny.s" value="johnny.s">
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col">
-                          <div class="form-group">
-                            <label>Email</label>
-                            <input class="form-control" type="text" placeholder="user@example.com">
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col mb-3">
-                          <div class="form-group">
-                            <label>About</label>
-                            <textarea class="form-control" rows="5" placeholder="My Bio"></textarea>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-12 col-sm-6 mb-3">
-                      <div class="mb-2"><b>Change Password</b></div>
-                      <div class="row">
-                        <div class="col">
-                          <div class="form-group">
-                            <label>Current Password</label>
-                            <input class="form-control" type="password" placeholder="••••••">
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col">
-                          <div class="form-group">
-                            <label>New Password</label>
-                            <input class="form-control" type="password" placeholder="••••••">
-                          </div>
-                        </div>
-                        <div class="col">
-                          <div class="form-group">
-                            <label>Confirm <span class="d-none d-xl-inline">Password</span></label>
-                            <input class="form-control" type="password" placeholder="••••••"></div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-12 col-sm-5 offset-sm-1 mb-3">
-                      <div class="mb-2"><b>Keeping in Touch</b></div>
-                      <div class="row">
-                        <div class="col">
-                          <label>Email Notifications</label>
-                          <div class="custom-controls-stacked px-2">
-                            <div class="custom-control custom-checkbox">
-                              <input type="checkbox" class="custom-control-input" id="notifications-blog" checked="">
-                              <label class="custom-control-label" for="notifications-blog">Blog posts</label>
-                            </div>
-                            <div class="custom-control custom-checkbox">
-                              <input type="checkbox" class="custom-control-input" id="notifications-news" checked="">
-                              <label class="custom-control-label" for="notifications-news">Newsletter</label>
-                            </div>
-                            <div class="custom-control custom-checkbox">
-                              <input type="checkbox" class="custom-control-input" id="notifications-offers" checked="">
-                              <label class="custom-control-label" for="notifications-offers">Personal Offers</label>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col d-flex justify-content-end">
-                      <button class="btn btn-primary" type="submit">Save Changes</button>
-                    </div>
-                  </div>
-                </form>
-  
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
 </main>
   
 
