--- a/src/views/admin/updateProduct.ejs
+++ b/src/views/admin/updateProduct.ejs
@@ -22,7 +22,7 @@
                 <% } %>
 
 
-                <form action="/salvar-edicao-produto/<% product._id %> " method="post" enctype="multipart/form-data">
+                <form action="/salvar-edicao-produto/<%=product.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                   
                   <label>Nome do produto:</label><br>
                   <input class="mb-3 fs-2" type="text" name="name" placeholder="Ex:.Telefone" value="<%= product.name %> " required />
