--- a/src/views/admin/listProduct.ejs
+++ b/src/views/admin/listProduct.ejs
@@ -69,7 +69,7 @@
                           <td class="text-center align-middle">
                             <div class="btn-group align-top">
 
-                              <form action="/admin/editar-produto/<%=products.id%>" method="GET"
+                              <form action="/admin/editar-produto/<%=products.id%>" method="POST"
                                 enctype="multipart/form-data">
                                 <button type="submit" class="btn btn-secondary btn-outline-light badge fs-6"
                                   id="button-edit">Editar</button>
