--- a/src/views/item.ejs
+++ b/src/views/item.ejs
@@ -9,10 +9,12 @@
     <%- include("./partials/header") %>
     <!--header-fim-->
     <main class="container">
- 
+  <% if(typeof error != 'undefined'){%>
+                  <h4><%= error %></h4>
+                  <% } %>
         <!-- Left Column / Headphones Image -->
         <div class="left-column">
-          <img data-image="black" src="/images/black.png" alt="">
+          <img data-image="black" src="/uploads/black.png" alt="">
           <img data-image="blue" src="/images/blue.png" alt="">
           <img data-image="red" class="active" src="/images/red.png" alt="">
         </div>
