--- a/src/views/cart/pedido-finalizado.ejs
+++ b/src/views/cart/pedido-finalizado.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <%- include("./partials/head")%>
+  <%- include("../partials/head")%>
   <link rel="stylesheet" href="/css/global.css" />
   <link rel="stylesheet" href="/css/orders.css" />
   
   <body>
     <!--header-->
-    <%- include("./partials/header") %>
+    <%- include("../partials/header") %>
     <!--header-end-->
     <main class= "orders">
         <div class = "order-confirmation">
@@ -44,7 +44,7 @@
     </main>
     <!--Footer-->
     <div class="footerBox">
-    <%- include("./partials/footer") %>
+    <%- include("../partials/footer") %>
     </div>
     <!--footer-fim-->
     
