--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -27,26 +27,26 @@
           </div>
         </label>
         <ul id="navbar-list">
-          <li><a href="#">News</a></li>
+          <li><a href="/noticias">News</a></li>
           <li><a href="/produtos/categorias">Categorias</a></li>
-          <li><a href="#">Sobre Nós</a></li>
+          <li><a href="/sobre">Sobre Nós</a></li>
           <li><a href="/contatos">Contato</a></li>
         </ul>
       </nav>
       <nav class="desktop-navbar">
         <ul class="topnav" id="myTopnav">
-          <li><a href="/produtos">News</a></li>
+          <li><a href="/noticias">News</a></li>
           <li><a href="/produtos/categorias">Categorias</a>
             <ul>
-              <li><a href="/produtos">Computadores</a></li>
-              <li><a href="/produtos">Games</a></li>
-              <li><a href="/produtos">Hardware</a></li>
-              <li><a href="/produtos">Periféricos</a></li>
-              <li><a href="/produtos">Televisores</a></li>
-              <li><a href="/produtos">Smartphones</a></li>
+              <li><a href="/produtos/categorias">Computadores</a></li>
+              <li><a href="/produtos/categorias">Games</a></li>
+              <li><a href="/produtos/categorias">Hardware</a></li>
+              <li><a href="/produtos/categorias">Periféricos</a></li>
+              <li><a href="/produtos/categorias">Televisores</a></li>
+              <li><a href="/produtos/categorias">Smartphones</a></li>
             </ul>
           </li>
-          <li><a href="/produtos">Sobre Nós</a></li>
+          <li><a href="/sobre">Sobre Nós</a></li>
           <li><a href="/contato">Contato</a></li>
 
         </ul>
