--- a/src/public/css/checkout.css
+++ b/src/public/css/checkout.css
@@ -1,3 +1,8 @@
-.cart-box-body h2 {
-    text-align: center;
+.cart-box {
+       padding: 8rem;
+    
+}
+
+.row {
+    justify-content: center;
 }
