--- a/src/views/cart/carrinho.ejs
+++ b/src/views/cart/carrinho.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <%- include("./partials/head")%>
+  <%- include("../partials/head")%>
   <link rel="stylesheet" href="/css/global.css" />
   <link rel="stylesheet" href="/css/cart.css" />
   <body>
     <!--header-->
-    <%- include("./partials/header") %>
+    <%- include("../partials/header") %>
     <!--header-end-->
     <div class="cart-box">
              
@@ -18,7 +18,7 @@
     </div>
     
     <!--Footer-->
-    <%- include("./partials/footer") %>
+    <%- include("../partials/footer") %>
     <!--footer-fim-->
   </body>
 </html>
