--- a/src/views/item.ejs
+++ b/src/views/item.ejs
@@ -9,12 +9,10 @@
     <%- include("./partials/header") %>
     <!--header-fim-->
     <main class="container">
-  <% if(typeof error != 'undefined'){%>
-                  <h4><%= error %></h4>
-                  <% } %>
+ 
         <!-- Left Column / Headphones Image -->
         <div class="left-column">
-          <img data-image="black" src="/uploads/black.png" alt="">
+          <img data-image="black" src="/images/black.png" alt="">
           <img data-image="blue" src="/images/blue.png" alt="">
           <img data-image="red" class="active" src="/images/red.png" alt="">
         </div>
@@ -26,7 +24,7 @@
           <!-- Product Description -->
           <div class="product-description">
             <span>Games</span>
-            <h1>Beats EP</h1>
+            <h1><%= products.name %> </h1>
             <p>
                 A escolha preferida de uma vasta gama de DJs aclamados. Som forte, focado em graves e alto isolamento. Faixa de cabeça resistente e almofadas na orelha adequadas para apresentações ao vivo.</p>
           </div>
