--- a/src/views/item.ejs
+++ b/src/views/item.ejs
@@ -24,7 +24,7 @@
           <!-- Product Description -->
           <div class="product-description">
             <span>Games</span>
-            <h1><%= products.name %> </h1>
+            <h1><%= product.name %> </h1>
             <p>
                 A escolha preferida de uma vasta gama de DJs aclamados. Som forte, focado em graves e alto isolamento. Faixa de cabeça resistente e almofadas na orelha adequadas para apresentações ao vivo.</p>
           </div>
